Fix favicon not showing

--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,3 +1,5 @@
+// Use padding instead of heights. See if that will be better
+
 img {
   width: 100%;
   height: 50%;
@@ -16,7 +18,7 @@ img {
   color: #fff;
   display: grid;
   grid-template-columns: repeat(3, auto);
-  grid-gap: 5px;
+  gap: 5px;
   margin: 5px 5px;
 
   & > div:nth-of-type(1) {
