--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ the compiled css is giving me so many errors
 -------------------------------------------------*/
 
 // Esther 4:16
-// 0774822266
+// 0774822266 - Jesus Is LORD Phone Number
 
 /* Variables for dark theme */
 $primary-color: #09ff09;
@@ -152,15 +152,15 @@ body {
 
 --------------------------------------- */
 .btn-scroll {
+  display: none;
   position: fixed;
   right: 2%;
   bottom: 6%;
-  display: none;
-  background-color: $button-color;
+  background-color: transparent;
   color: $button-text-color;
   padding: 10px;
   outline: none;
-  border: none;
+  border: 1px solid #fff;
   border-radius: 3px 20px 7px;
   z-index: 99;
   transition: 0.3s;
@@ -168,6 +168,7 @@ body {
   &:hover {
     cursor: pointer;
     background-color: darken($color: $button-color, $amount: 10%);
+    border: 1px solid $button-color;
   }
 }
 
@@ -193,15 +194,11 @@ body {
   }
 
   .main-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     padding-bottom: 10px;
-    // position: fixed;
-    top: 13%;
-    width: 100%;
-    opacity: 0.9;
     @include transition();
-    z-index: 10;
 
     li {
       margin-right: 10px;
@@ -228,14 +225,11 @@ body {
 --------------------------------------- */
 .showcase {
   color: $text-color-dark;
-  max-width: 1100px;
-  margin: auto;
-  position: relative;
-  height: 690px;
-  top: 25%;
-  left: 0%;
-  transform: translate(0, 25%);
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: center;
+  padding: 200px 10px;
 
   h1 {
     font-size: 50px;
@@ -245,17 +239,22 @@ body {
     font-size: 30px;
   }
 
-  .btn {
-    cursor: pointer;
-    position: relative;
-    background-color: $button-color;
-    color: $button-text-color;
-    padding: 10px 30px;
-    border-radius: 7px 100px 50px;
-    @include transition();
+  div {
+    margin: 20px;
 
-    &:hover {
-      background-color: darken($color: $button-color, $amount: 15%);
+    .btn {
+      cursor: pointer;
+      position: relative;
+      background-color: $button-color;
+      color: $button-text-color;
+      padding: 10px 30px;
+      border-radius: 7px 100px 50px;
+      @include transition();
+      width: 10%;
+
+      &:hover {
+        background-color: darken($color: $button-color, $amount: 15%);
+      }
     }
   }
 }
@@ -268,19 +267,15 @@ body {
 .section-1 {
   color: $text-color-dark;
   text-align: center;
-  background: url('../images/showcase.jpg') no-repeat center center/cover;
-  height: 690px;
+  background: url('../images/showcase.jpg') no-repeat center top/cover;
 
   .overlay {
     background-color: rgba(0, 9, 26, 0.5);
-    height: 690px;
+    padding: 200px 10px 300px 0;
   }
 
   p {
     font-size: 24px;
-    display: grid;
-    place-content: center;
-    padding-top: 100px;
   }
 }
 
@@ -291,11 +286,9 @@ body {
 --------------------------------------- */
 .section-2 {
   color: $text-color-dark;
-  align-items: center;
   text-align: center;
-  height: 690px;
-  margin-top: 70px;
   letter-spacing: 1px;
+  padding: 70px 10px;
 
   h1 {
     font-size: 36px;
@@ -307,7 +300,7 @@ body {
 
   .functions {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     letter-spacing: 1px;
 
     & > div {
@@ -359,7 +352,7 @@ body {
 --------------------------------------- */
 .footer {
   color: $text-color-dark;
-  height: 150px;
+  padding: 30px 0 50px;
   // position: relative;
   // left: 0;
   // bottom: 0;
@@ -412,8 +405,6 @@ body {
   }
 
   .section-2 {
-    margin-bottom: 50px;
-
     .functions {
       & > div:first-child {
         img {
@@ -773,10 +764,6 @@ body {
 -----------------------------------*/
 @media (max-width: 1000px) {
   #header {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-
     h1 {
       padding: 5px 0;
     }
@@ -790,18 +777,7 @@ body {
     }
   }
 
-  .showcase {
-    height: 720px;
-    padding: 0 10px;
-  }
-
-  .section-1 {
-    height: 690px;
-  }
-
   .section-2 {
-    height: 1550px;
-
     h1 {
       padding: 0 10px;
     }
@@ -856,8 +832,6 @@ body {
 -----------------------------------*/
 @media (max-width: 800px) {
   .section-2 {
-    height: 1400px;
-
     .functions {
       & > div:first-child {
         img {
@@ -914,7 +888,6 @@ body {
   }
 
   .section-2 {
-    height: 1300px;
     letter-spacing: 0;
 
     h1 {
@@ -960,8 +933,6 @@ body {
   }
 
   .footer {
-    height: 400px;
-
     .footer-items {
       grid-template-columns: 1fr;
       text-align: center;
@@ -1001,8 +972,6 @@ body {
   }
 
   .section-2 {
-    height: 1350px;
-
     .functions {
       h3 {
         font-size: 24px;
@@ -1032,10 +1001,6 @@ body {
         }
       }
     }
-  }
-
-  .footer {
-    height: 400px;
   }
 }
 
@@ -1115,10 +1080,6 @@ body {
 @media (max-width: 500px) {
   #header {
     .main-list {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
       li {
         text-align: center;
 
@@ -1223,8 +1184,6 @@ body {
   }
 
   .section-2 {
-    height: 1230px;
-
     h1 {
       font-size: 24px;
     }
@@ -1286,14 +1245,6 @@ body {
       }
     }
   }
-
-  .section-2 {
-    height: 1250px;
-  }
-
-  .footer {
-    height: 400px;
-  }
 }
 
 /*----------------------------------
@@ -1314,8 +1265,6 @@ body {
   }
 
   .section-2 {
-    height: 1100px;
-
     h1 {
       font-size: 20px;
     }
@@ -1448,13 +1397,5 @@ body {
         }
       }
     }
-  }
-
-  .section-2 {
-    height: 1200px;
-  }
-
-  .footer {
-    width: 100%;
   }
 }
